# python-docx-replace

./: .gitignore  LICENSE  Makefile  README.md  deploy  pyproject.toml  setup.cfg
requirements/: dev.txt  prod.txt
src/python_docx_replace/: __init__.py  block_handler.py  blocks.py  common.py  docx_extensions.py  docx_handle_blocks.py  docx_replace.py  exceptions.py  key_changer.py  paragraph.py  replacer.py  test.py
test/: app.py  hello.docx  hello2.docx  hello3.docx  hello4.docx
