[metadata]
name = python-docx-replace
version = 0.1.0
author = Ivan Bicalho
author_email = ivanribeirob@gmail.com
description = Replace words inside a Word document without losing format
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ivanbicalho/python-docx-replace
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    python-docx

[options.packages.find]
where = src